--- a/audit/src/main/resources/application-dev.properties
+++ b/audit/src/main/resources/application-dev.properties
@@ -1,16 +1,26 @@
+#************************************************************************
+
 server.port =8080
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/ust_audit
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
-login.level.org.hibernate.SQL=debug
+#************************************************************************
+
+#printing sql statements in the console
+spring.jpa.show-sql=true
+
+logging.level.org.hibernate.SQL=debug
 
 
-logging.level.com.student.ust=trace
+logging.level.com.ust.audit=trace
 logging.file.name=ustAudit.log
 
 login.level.org.hibernate.type.descriptor.sql=trace
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
+#secret key
+ust.jwt.secret=audit_secret
