--- a/audit/src/main/resources/application-dev.properties
+++ b/audit/src/main/resources/application-dev.properties
@@ -15,11 +15,11 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=debug
 
 
-logging.level.com.ust.audit=trace
-logging.file.name=ustAudit.log
+#logging.level.com.ust.audit=trace
+#logging.file.name=ustAudit.log
 
-login.level.org.hibernate.type.descriptor.sql=trace
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
 #secret key
