--- a/audit/src/main/resources/application-dev.properties
+++ b/audit/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 #************************************************************************
 
-server.port =9631
+server.port =5000
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/ust_audit
+spring.datasource.url=jdbc:mysql://ustaudit.ce7oo723jov8.us-east-2.rds.amazonaws.com/ust_audit
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=rootroot
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #************************************************************************
